--- a/composer.json
+++ b/composer.json
@@ -6,22 +6,25 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.26",
+        "laravel/framework": "^11.31",
         "laravel/tinker": "^2.10",
-        "livewire/flux": "^1.0.8",
-        "livewire/flux-pro": "^1.0.8",
-        "livewire/livewire": "^3.5.9",
-        "livewire/volt": "^1.6.5"
+        "livewire/flux": "^1.0.23",
+        "livewire/flux-pro": "^1.0.23",
+        "livewire/livewire": "^3.5.12",
+        "livewire/volt": "^1.6.6"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.23.1",
-        "laravel/breeze": "^2.2.1",
+        "barryvdh/laravel-ide-helper": "^3.2.2",
+        "fakerphp/faker": "^1.24.0",
+        "larastan/larastan": "^2.9.11",
+        "laravel/breeze": "^2.2.5",
         "laravel/pint": "^1.18.1",
-        "laravel/sail": "^1.34",
+        "laravel/sail": "^1.38.0",
         "mockery/mockery": "^1.6.12",
-        "nunomaduro/collision": "^8.4",
-        "pestphp/pest": "^3.2.5",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "nunomaduro/collision": "^8.5",
+        "pestphp/pest": "^3.5.1",
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "rector/rector": "^1.2.10"
     },
     "autoload": {
         "psr-4": {
@@ -41,7 +44,9 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:model --nowrite"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
